kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tgsaver
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        application: services
      containers:
      - name: tgsaver
        image: iaroki/tgsaver:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
          name: http
          protocol: TCP
