kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tgsaver
spec:
  selector:
    app: tgsaver
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
