kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tgsaver
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/hostname: tgsaver.omo.name
    cert-manager.io/issuer: grafana-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
spec:
  tls:
    - hosts:
        - tgsaver.omo.name
      secretName: tgsaver-tls
  rules:
    - host: tgsaver.omo.name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tgsaver
                port:
                  number: 8888
